CSS fixes: aligned accordion style with recogito-client

--- a/src/styles/accordion/index.css
+++ b/src/styles/accordion/index.css
@@ -1,26 +1,20 @@
 .accordion-root {
-	border-radius: 6px;
+  border-radius: 6px;
 }
 
 .accordion-item {
-	background-color: var(--gray-50);
-  border: 1px solid var(--gray-200);
 	overflow: hidden;
 }
 
-.accordion-item + .accordion-item {
-  border-top: none;
-}
-
 .accordion-item:first-child {
-	margin-top: 0;
-	border-top-left-radius: 4px;
-	border-top-right-radius: 4px;
+  margin-top: 0;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
 }
 
 .accordion-item:last-child {
-	border-bottom-left-radius: 4px;
-	border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 .accordion-item:focus-within {
@@ -29,30 +23,34 @@
 }
 
 .accordion-header {
-	background-color: #fff; 
-	display: flex;
-	position: relative;
-	z-index: 2;
+  border-radius: 6px;
+  display: flex;
+  z-index: 2;
+  position: relative;
+  margin-block-start: 0 !important;
+  margin-block-end: 0 !important;
 }
 
 .accordion-header[data-state='open'] {
 	border-bottom: 1px solid var(--gray-200);
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
-.accordion-root button.accordion-trigger {
+button.accordion-trigger {
 	background-color: white;
 	font-family: inherit;
 	background-color: transparent;
 	padding: 0 20px;
 	height: 45px;
-	flex: 1;
+	flex-grow: 1;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	line-height: 1;
 }
 
-.accordion-root button.accordion-trigger:hover {
+button.accordion-trigger:hover {
 	background-color: var(--gray-2);
 }
 
@@ -60,12 +58,11 @@
 	transform: translateY(-2px);
 }
 
-.accordion-content[data-state="open"] {
-	animation: slideDown 300ms cubic-bezier(0.87, 0, 0.13, 1);
+.accordion-content[data-state='open'] {
+  animation: slideDown 300ms cubic-bezier(0.87, 0, 0.13, 1);
 }
-
-.accordion-content[data-state="closed"] {
-	animation: slideUp 300ms cubic-bezier(0.87, 0, 0.13, 1);
+.accordion-content[data-state='closed'] {
+  animation: slideUp 300ms cubic-bezier(0.87, 0, 0.13, 1);
 }
 
 .accordion-chevron {
@@ -77,19 +74,19 @@
 }
 
 @keyframes slideDown {
-	from {
-		height: 0;
-	}
-	to {
-		height: var(--radix-accordion-content-height);
-	}
+  from {
+    height: 0;
+  }
+  to {
+    height: var(--radix-accordion-content-height);
+  }
 }
 
 @keyframes slideUp {
-	from {
-		height: var(--radix-accordion-content-height);
-	}
-	to {
-		height: 0;
-	}
+  from {
+    height: var(--radix-accordion-content-height);
+  }
+  to {
+    height: 0;
+  }
 }
